added multiple helpers under [credential]

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,5 +22,6 @@
 	defaultBranch = main
 [credential]
 	helper = /usr/local/share/gcm-core/git-credential-manager
+	helper = /mnt/c/Program\\ Files/Git/mingw64/bin/git-credential-manager.exe
 [credential "https://dev.azure.com"]
 	useHttpPath = true
